--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,12 @@ body {
 .updatebutton {
   margin: 0px 0px 0px 10px;
 }
+
+.sessionShow {
+  text-align: center
+}
+
+.sessionShowButtons {
+  display: flex;
+  justify-content: center;
+}
